--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "parser": "babel-eslint",
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "jquery": true
   },
   "plugins": [
     "react"
